--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,18 +14,21 @@ DB-01
     <div class="row">
         <div class="col-lg-6 col-md-12">
             <div class="card projects">
-                <div class="card-header card-header-primary">
+                <!-- <div class="card-header card-header-primary">
                     <h4 class="card-title">プロジェクト</h4>
-                    <!-- <p class="card-category"><span class="eventsCount"></span>件のイベントが開催中あるいは開催予定です</p> -->
-                </div>
-                <div class="card-body table-responsive">
-                    <table class="table table-hover">
-                        <thead class="text-primary">
-                            <th>名称</th>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
+                    <p class="card-category"><span class="eventsCount"></span>件のイベントが開催中あるいは開催予定です</p>
+                </div> -->
+                <div class="card-body">
+                    <h4 class="card-title">プロジェクト</h4>
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <thead class="text-primary">
+                                <th>名称</th>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
