--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -11,7 +11,7 @@
             <div class="modal-body">
                 <div class="card mb-0">
                     <div class="card-body">
-                        <form class="">
+                        <form>
                             <div class="form-row">
                                 <div class="form-group bmd-form-group col-md-4">
                                     <label class="bmd-label-static" for="theater">劇場<font color="red">＊</font>
@@ -164,9 +164,8 @@
                                     <div class="form-inline d-none input-type" data-input-type="absolute">
                                         <input class="form-control datepicker" name="saleStartDateAbsolute"
                                             placeholder="YYYY/MM/DD" maxlength=10>&nbsp;&nbsp;
-                                        <%- include('../../common/part/_timeSelector', {
-                                            name: 'saleStartTime'
-                                        }) %>
+                                        <input name="saleStartTime" type="text" class="form-control timepicker"
+                                            autocomplete="off" placeholder="HH:mm">
                                     </div>
                                     <div class="form-inline d-none input-type" data-input-type="relative">
                                         <input type="text" class="form-control" name="saleStartDateRelative"
@@ -219,76 +218,69 @@
                                 </div>
                             </div>
 
-                            <div class="table-responsible">
-                                <table class="table">
-                                    <thead class="text-primary">
-                                        <th>開場 / 開始 ~ 終了</th>
-                                        <th>券種グループ</th>
-                                        <th class="mvtk">ムビチケ対象外</th>
-                                    </thead>
-                                    <tbody>
-                                        <% for (let i = 1; i <= 6; i++) { %>
-                                        <tr>
-                                            <td width="50%">
-                                                <div class="input-group">
-                                                    <%- include('../../common/part/_timeSelector', {
-                                                            name: 'doorTime'
-                                                        }) %>
-                                                    <div class="input-group-append">
-                                                        <span class="input-group-text">/</span>
-                                                    </div>
-                                                    <%- include('../../common/part/_timeSelector', {
-                                                            name: 'startTime'
-                                                        }) %>
-                                                    <div class="input-group-append">
-                                                        <span class="input-group-text">~</span>
-                                                    </div>
-                                                    <select class="form-control" name="endDayRelative">
-                                                        <option value="0">開始当日</option>
-                                                        <option value="1">1日後</option>
-                                                        <option value="2">2日後</option>
-                                                        <option value="3">3日後</option>
-                                                    </select>
-                                                    <div class="input-group-append">
-                                                        <span class="input-group-text">の</span>
-                                                    </div>
-                                                    <%- include('../../common/part/_timeSelector', {
-                                                            name: 'endTime'
-                                                        }) %>
+                            <% for (let i = 1; i <= 6; i++) { %>
+                            <tr>
+                                <td>
+                                    <div class="form-row timeTable">
+                                        <div class="form-group bmd-form-group col-md-6 mt-0 pb-0">
+                                            <div class="input-group">
+                                                <input name="doorTime" type="text" class="form-control timepicker"
+                                                    autocomplete="off" placeholder="開場">
+                                                <div class="input-group-append">
+                                                    <span class="input-group-text">/</span>
                                                 </div>
-                                            </td>
-                                            <td>
-                                                <select class="form-control" name="ticketTypeGroup">
-                                                    <option value="" disabled selected>選択してください</option>
-                                                    <% for (ticketType of ticketGroups) { %>
-                                                    <option value="<%= ticketType.id %>">
-                                                        <%= ticketType.name.ja %>
-                                                    </option>
-                                                    <% } %>
+                                                <input name="startTime" type="text" class="form-control timepicker"
+                                                    autocomplete="off" placeholder="開始">
+                                                <div class="input-group-append">
+                                                    <span class="input-group-text">~</span>
+                                                </div>
+                                                <select class="form-control" name="endDayRelative">
+                                                    <option value="0">開始当日</option>
+                                                    <option value="1">1日後</option>
+                                                    <option value="2">2日後</option>
+                                                    <option value="3">3日後</option>
                                                 </select>
-                                            </td>
-                                            <td class="mvtk">
-                                                <div class="form-check form-check-inline">
-                                                    <label class="form-check-label"><input class="form-check-input"
-                                                            type="checkbox" name="mvtkExcludeFlg">
-                                                        <span class="form-check-sign">
-                                                            <span class="check"></span>
-                                                        </span></label>
+                                                <div class="input-group-append">
+                                                    <span class="input-group-text">の</span>
                                                 </div>
-                                            </td>
-                                        </tr>
-                                        <% } %>
-                                    </tbody>
-                                </table>
-                            </div>
+                                                <input name="endTime" type="text" class="form-control timepicker"
+                                                    autocomplete="off" placeholder="終了">
+                                            </div>
+                                        </div>
+                                        <div class="form-group bmd-form-group col-md-4 mt-0 pb-0">
+                                            <select class="form-control" name="ticketTypeGroup">
+                                                <option value="" disabled selected>券種グループを選択</option>
+                                                <% for (ticketType of ticketGroups) { %>
+                                                <option value="<%= ticketType.id %>">
+                                                    <%= ticketType.name.ja %>
+                                                </option>
+                                                <% } %>
+                                            </select>
+                                        </div>
+                                        <div class="form-group bmd-form-group col-md-2 mt-0 pb-0 mvtk">
+                                            <div class="form-check form-check-inline">
+                                                <label class="form-check-label"><input class="form-check-input"
+                                                        type="checkbox" name="mvtkExcludeFlg">ムビチケ不可
+                                                    <span class="form-check-sign">
+                                                        <span class="check"></span>
+                                                    </span>
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                            <% } %>
                         </form>
                     </div>
                 </div>
             </div>
+
             <input type="hidden" name="maxSeatNumber" value="">
             <input type="hidden" name="saleStartDays" value="">
+
             <div class="modal-footer">
-                <button type="button" class="btn bg-dark-gray text-white" data-dismiss="modal">閉じる</button>
+                <button type="button" class="btn bg-dark-gray" data-dismiss="modal">閉じる</button>
                 <button type="button" class="btn btn-primary regist-button">登録</button>
             </div>
         </div>
