### Changed - イベント管理を日本時間で日またぎの設定に対応

--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -236,7 +236,7 @@
                                                 </div>
                                                 <select class="form-control" name="endDayRelative">
                                                     <option value="0">開始当日</option>
-                                                    <option value="1">1日後</option>
+                                                    <option value="1">翌日</option>
                                                     <option value="2">2日後</option>
                                                     <option value="3">3日後</option>
                                                 </select>
