--- a/views/serviceTypes/add.ejs
+++ b/views/serviceTypes/add.ejs
@@ -15,25 +15,9 @@ Aa-16
             <%- include('../common/errorMessage') %>
             <%- include('../common/successMessage') %>
         </div>
-        <div class="form-group">
-            <label for="codeValue" class="">
-                興行区分コード<span class="text-danger">＊</span>
-            </label>
-            <input type="text" class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64
-                value="<%= forms.codeValue %>">
-            <p class="message">
-                <% /*半角64文字以内でご入力ください。*/ %>
-                半角64文字以内でご入力ください。
-            </p>
-            <p class="error message text-danger">
-                <% if (errors && errors.codeValue) { %>
-                <%- errors.codeValue.msg %>
-                <% } %>
-            </p>
-        </div>
 
         <% /* 登録・更新共通部 */ %>
-        <%- include('form', { forms: forms }) %>
+        <%- include('form', { forms: forms, isNew: true }) %>
 
         <% /* 登録ボタン */ %>
         <div class="btn-area panel-body">
