--- a/views/serviceTypes/edit.ejs
+++ b/views/serviceTypes/edit.ejs
@@ -16,16 +16,8 @@ Aa-16
             <%- include('../common/successMessage') %>
         </div>
 
-        <div class="form-group">
-            <label class="">
-                興行区分コード
-            </label>
-            <input readonly type="text" class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64
-                value="<%= forms.codeValue %>">
-        </div>
-
         <% /* 登録・更新共通部 */ %>
-        <%- include('form', { forms: forms }) %>
+        <%- include('form', { forms: forms, isNew: false }) %>
 
         <% /* 更新ボタン */ %>
         <div class="btn-area panel-body">
