--- a/views/serviceTypes/form.ejs
+++ b/views/serviceTypes/form.ejs
@@ -1,19 +1,60 @@
-<div class="form-group">
-    <label for="name[ja]" class="">
-        名称<span class="text-danger">＊</span>
-    </label>
-    <input class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
-        value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.ja : '' %>">
-    <p class="message">
-        全角64文字以内でご入力ください。
-    </p>
-    <p class="error message text-danger">
-        <% if (errors && errors['name.ja']) { %>
-        <%- errors['name.ja'].msg %>
-        <% } %>
-    </p>
-</div>
+<div class="card">
+    <div class="card-header card-header-primary card-header-text">
+        <div class="card-text">
+            <h4 class="card-title">基本設定</h4>
+        </div>
+    </div>
 
-<%- include('../common/part/_additionalProperty', {
-    additionalProperty: forms.additionalProperty
-}) %>
+    <div class="card-body">
+        <div class="form-group bmd-form-group">
+            <label for="codeValue" class="bmd-label-static">
+                区分コード<span class="text-danger">＊</span>
+            </label>
+
+            <% if (isNew) { %>
+            <input type="text" class="form-control" name="codeValue" id="codeValue" placeholder="" maxlength=64
+                value="<%= forms.codeValue %>">
+            <span class="bmd-help">半角64文字以内でご入力ください</span>
+            <span class="bmd-help text-danger d-block">
+                <% if (errors && errors.codeValue) { %>
+                <%- errors.codeValue.msg %>
+                <% } %>
+            </span>
+            <% } else { %>
+            <input type="hidden" class="form-control" name="codeValue" id="codeValue" value="<%= forms.codeValue %>">
+            <input disabled type="text" class="form-control" value="<%= forms.codeValue %>">
+            <% } %>
+        </div>
+
+        <div class="form-group bmd-form-group">
+            <label for="name[ja]" class="bmd-label-static">
+                名称<span class="text-danger">＊</span>
+            </label>
+            <input class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64
+                value="<%= (forms.name !== undefined && forms.name !== null) ? forms.name.ja : '' %>">
+            <p class="message">
+                全角64文字以内でご入力ください。
+            </p>
+            <p class="error message text-danger">
+                <% if (errors && errors['name.ja']) { %>
+                <%- errors['name.ja'].msg %>
+                <% } %>
+            </p>
+        </div>
+    </div>
+</div>
+<!-- end card -->
+
+<div class="card">
+    <div class="card-header card-header-primary card-header-text">
+        <div class="card-text">
+            <h4 class="card-title">追加特性</h4>
+        </div>
+    </div>
+    <div class="card-body">
+        <%- include('../common/part/_additionalProperty', {
+            additionalProperty: forms.additionalProperty
+        }) %>
+    </div>
+</div>
+<!-- end card -->
