--- a/views/common/part/_additionalProperty.ejs
+++ b/views/common/part/_additionalProperty.ejs
@@ -1,23 +1,14 @@
-<div class="form-group">
-    <label class="bmd-label-static">
-        追加特性
-    </label>
-
-    <% additionalProperty.forEach((_, key) => { %>
-    <div class="row mb-1 px-3">
-        <!-- <span class="input-group-addon">Name:Value</span> -->
-        <div class="form-group bmd-form-group col-6">
-            <label class="bmd-label-floating">name</label>
-            <input class="form-control" name="additionalProperty[<%= key %>][name]"
-                id="additionalProperty[<%= key %>][name]" maxlength=64 value="<%= additionalProperty[key].name %>">
-        </div>
-        <div class="form-group bmd-form-group col-6">
-            <label class="bmd-label-floating">value</label>
-            <input class="form-control" name="additionalProperty[<%= key %>][value]"
-                id="additionalProperty[<%= key %>][value]" maxlength=64 value="<%= additionalProperty[key].value %>">
-        </div>
+<% additionalProperty.forEach((_, key) => { %>
+<div class="form-row">
+    <div class="form-group bmd-form-group col-6">
+        <label class="bmd-label-floating">name</label>
+        <input class="form-control" name="additionalProperty[<%= key %>][name]"
+            id="additionalProperty[<%= key %>][name]" maxlength=64 value="<%= additionalProperty[key].name %>">
     </div>
-    <% }) %>
-    <span class="bmd-help text-danger d-block">
-    </span>
+    <div class="form-group bmd-form-group col-6">
+        <label class="bmd-label-floating">value</label>
+        <input class="form-control" name="additionalProperty[<%= key %>][value]"
+            id="additionalProperty[<%= key %>][value]" maxlength=64 value="<%= additionalProperty[key].value %>">
+    </div>
 </div>
+<% }) %>
